! Fixed and optimized math function in the CSS parser. I was pretty sure I'd tested it thoroughly, eh... (Class-CSS.php) + Added support for some basic PHP functions in math(), in case you need them: round, ceil, floor, abs and fmod. (Class-CSS.php) * Moved gz Mime type overrides to the cache folder. (other/.htaccess, cache/.htaccess) * Ensure WAP2 mode never uses more than .5em of whitespace between lines. (wireless.css) * Made a code block more compact, because I've learned to hate it, and I don't want to see it anymore. (script.js)

--- a/Themes/default/css/wireless.css
+++ b/Themes/default/css/wireless.css
@@ -23,6 +23,9 @@
 .updated {
 	color: red;
 }
+p {
+	margin: .5em 0;
+}
 
 /* Resize our post area as needed */
 #message {
